--- a/projects/wsms/assets/css/style.3.css
+++ b/projects/wsms/assets/css/style.3.css
@@ -110,6 +110,9 @@ body {
 .group-btn {
 	margin-top: 6%;
 }
+.group-btn-2rows {
+	padding-bottom: 30px;
+}
 @media ( max-width: 320px ) {
 	.wsms .image-side .img.img-left {
 		background-position: -80px 18px;
@@ -140,7 +143,7 @@ body {
 
 	.wsms-tep .text-side {
 	    margin-top: -20px;
-	    height: 210px;
+	    height: 180px;
 	}
 
 	.wsms .img-cursive {
@@ -167,7 +170,11 @@ body {
 		background-position: -40px 18px;
 	}
 }
-
+// @media ( min-width: 410px ) and ( max-width: 420px ) {
+// 	.wsms-tep .text-side {
+// 	    height: 320px;
+// 	}
+// }
 @media ( min-width: 481px ) and ( max-width: 767px ) {
 	.wsms-tep {
 		margin-top: 20px;
@@ -277,11 +284,11 @@ body {
 	}
 
 	.img-logo {
-		width: 80%;
+		width: 100%;
 	}
 
 	.text-side {
-		padding: 40px;
+		padding: 80px;
 	}
 
 	.wsms-tep .text-side {
@@ -295,15 +302,15 @@ body {
 
 @media ( min-width: 1200px ) and ( max-width: 1365px ) {
 	.wsms .img-cursive {
-		width: 56%;
+		width: 48%;
 	}
 
 	.img-logo {
-		width: 80%;
+		width: 90%;
 	}
 
 	.text-side {
-		padding: 60px;
+		padding: 84px;
 	}
 
 	.wsms-tep .text-side {
@@ -313,19 +320,27 @@ body {
 	.wsms-tep .img-cursive {
 		width: 60%;
 	}
+
+	.image-side .img.img-left {
+	    background-position: 0 40px;
+	}
 }
 
 @media ( min-width: 1366px ) {
 	.wsms .img-cursive {
-		width: 40%;
+		width: 45%;
+	}
+
+	.image-side .img.img-left {
+	    background-position: 0 40px;
 	}
 
 	.img-logo {
-		width: 60%;
+		width: 74%;
 	}
 
 	.text-side {
-		padding: 60px;
+		padding: 80px 0 80px 80px;
 	}
 
 	.wsms-tep .text-side {
